# lyzr-agentic-buildo

./: .gitignore  NETDATA_DASHBOARD_ACCESS.md  PROJECT_SUMMARY.md  README.md  UNIFIED_MONITORING_DASHBOARD.md  UNIFIED_PLATFORM_README.md  UNIFIED_PLATFORM_SUMMARY.md  deploy.sh  netdata.sh  run-all.sh  setup-monitoring.sh  setup-netdata.sh  setup-unified-monitoring.sh  test-netdata.sh
.github/workflows/: build-images.yml  ci.yml  publish-helm.yml  sdk-gen.yml  sdk-generation.yml  security.yml  supply-chain.yml
charts/agentic-orch/: Chart.yaml  values.yaml
charts/agentic-orch/templates/: _helpers.tpl  deployment.yaml
deploy/argocd/: applicationset.yaml
docker/: Dockerfile.agent_registry  Dockerfile.api  Dockerfile.audit_service  Dockerfile.execution_service  Dockerfile.metering_service  Dockerfile.model_gateway  Dockerfile.qdrant_rag  Dockerfile.session_service  Dockerfile.tool_gateway  Dockerfile.worker  docker-compose.yml
docs/analysis/: TECHNICAL_DEEP_DIVE.md
docs/architecture/: RAG_ASSESSMENT.md  RAG_ROADMAP.md
docs/auth/: oidc-setup.md
docs/backlog/: epics.yaml  issues.json
docs/implementation/: 10_DAY_PLAN.md  NETDATA_IMPLEMENTATION_SUMMARY.md  UI_MONITORING_IMPLEMENTATION_SUMMARY.md
docs/monitoring/: NETDATA_SETUP_GUIDE.md
docs/observability/: tracing-guide.md
docs/pricing/: sku_matrix.json  sku_matrix.md
docs/ui/: UI_DEVELOPMENT_GUIDE.md
monitoring/: docker-compose.monitoring.yml
monitoring/grafana/dashboards/: aob-platform.json  aob-tracing.json
monitoring/netdata/: api_key.txt  claim_token.txt  docker-compose.netdata.yml  docker-compose.netdata.yml.bak  docker-compose.simple.yml  docker-compose.unified.yml  health.conf  netdata.conf  stream.conf
monitoring/otel-collector/: otel-collector.yml
monitoring/prometheus/: prometheus.yml
policies/: aob.rego
sdk/python/: pyproject.toml
sdk/python/aob_sdk/: __init__.py
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
services/api/: pyproject.toml
services/api/src/aob_api/: app.py  oidc.py
services/audit_service/: pyproject.toml
services/audit_service/src/audit_service/: app.py
services/worker/: pyproject.toml
services/worker/src/aob_worker/: runner.py
terraform/: main.tf  variables.tf
terraform/environments/: dev.tf
tests/: test_engine.py
ui/: package.json  tailwind.config.js  vite.config.ts
ui/src/components/: AOBPlatformDashboard.css  AOBPlatformDashboard.tsx  EnhancedSessionViewer.css  EnhancedSessionViewer.tsx  EnhancedWorkflowEditor.css  EnhancedWorkflowEditor.tsx  NetdataIntegration.css  NetdataIntegration.tsx  (+3 more)
(+12 files in other folders)
