
[project]
name = "aob-api"
version = "0.1.0"
description = "Agentic Orchestration Builder - API"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.8.0", "pyyaml>=6.0.1", "agentic-core==0.1.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
