[project]
name = "audit-service"
version = "0.1.0"
description = "Agentic Orchestration Builder - Audit Service"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pandas>=2.0.0",
  "pyarrow>=15.0.0",
  "boto3>=1.34.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
