
[project]
name = "aob-worker"
version = "0.1.0"
description = "Agentic Orchestration Builder - Worker"
requires-python = ">=3.10"
dependencies = ["agentic-core==0.1.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
